[package]
name = "dat-network-protocol"
description = "Dat Network Protocol protobuf definitions."
version = "0.1.3-alpha.0"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
protobuf = "1.4.3"

[build-dependencies]
protoc-rust = "1.4"
