[package]
name = "dat-network-protocol"
description = "Dat Network Protocol protobuf definitions."
version = "0.2.0"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
protobuf = "=2.10.1"

[build-dependencies]
protobuf-codegen-pure = "=2.10.1"
