[package]
name = "dat-network-protocol"
description = "Dat Network Protocol protobuf definitions."
version = "0.3.0"
repository = "https://github.com/datrs/dat-network-protocol"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
protobuf = "=2.10.1"

[build-dependencies]
protobuf-codegen-pure = "=2.10.1"
